--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.487.0",
     "radix-ui": "^1.4.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
-    "react-image-lightbox": "^5.1.4",
     "react-inner-image-zoom": "^4.0.1",
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
@@ -29,6 +28,7 @@
     "redux-persist": "^6.0.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
+    "yet-another-react-lightbox": "^3.25.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
